@@ -1,3 +1,7 @@
+Jun 02, 2023
+  CurationDafGenerator -- updated to schema 1.7.3
+    disease_genetic_modifier_curie ==> disease_genetic_modifier_curies
+
 May 25, 2023
   CurationDafGenerator -- moved hard-coded qualifier mappings into properties file
     changed the qualifiers as follows (per SCRUM-2824):
